<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/loginTitle" />

    <EditText
        android:id="@+id/login_email"
        style="@style/EditTextTheme"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTitle"/>

    <EditText
        android:id="@+id/login_password"
        style="@style/EditTextTheme"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textWebPassword"

        app:layout_constraintLeft_toLeftOf="@id/login_email"
        app:layout_constraintTop_toBottomOf="@id/login_email"/>

    <Button
        android:id="@+id/login_button"
        style="@style/ButtonTheme"
        android:text="@string/loginButton"

        app:layout_constraintLeft_toLeftOf="@id/login_password"
        app:layout_constraintTop_toBottomOf="@id/login_password" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
